# kardiaflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
archive/legacy_infra/: ls_postgres_claims.json
automation/: generate_feedback_and_device_data.py  kardia_patients_encounters_job.json  split_claims_dataset.py  test_mongodb_connection.py  test_postgres_connection.py  test_sqlserver_connection.py
automation/db_checks/: test_oracle_connection.py
automation/infra/: deploy.bicep  docker-compose.yml  teardown.sh
automation/mongodb/: load_feedback.py
automation/oracle/: load_encounters.py  load_patients.py
data/analysis/: read_parquet.py
data/claims/: claims_part_1.avro  (+5 more)
docs/: CHANGELOG.md  MERMAID.md  POSTMORTEM.md  README.md  data_dictionary.md  data_model.md  environment_check.md  postmortem.md  project_summary.md  security.md  source_schema.md  summit_reflections.md
infra/: .env.example  README.md  deploy.bicep  gen_sas.sh
kflow/: README.md  adls.py  auth_adls.py  config.py  display_utils.py  etl_utils.py  notebook_utils.py
metastore_db/: db.lck  service.properties
notebooks/: README.md
notebooks_databricks/: 33_reset_kardia_environment.ipynb
pipelines/: Kardiaflow Analytics.lvdash.json  README.md  kardiaflow_full_run_batch.json
tests/: _README.md  conftest.py  test_adls.py  test_auth_adls.py  test_bronze_checks.py  test_config.py  test_etl_utils.py  test_gold_checks.py  test_logging_utils.py  test_silver_checks.py  test_silver_patients.py  test_validation_checks.py  z_README.md
(+223 files in other folders)
